--- a/index.html
+++ b/index.html
@@ -21,6 +21,32 @@
 </head>
 <body>
 
+    <!-- navigation section -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <div class="container">
+            <a href="index.html" class="navbar-brand">LoopLab</a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggle-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="#home" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#explore" class="nav-link">Explore</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#create" class="nav-link">Create</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#share" class="nav-link">Share</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <!-- fontawesome webfont -->
     <script src="https://kit.fontawesome.com/70401da5f8.js" crossorigin="anonymous"></script>
     <!-- fontawesome SVG -->
