--- a/index.html
+++ b/index.html
@@ -47,6 +47,73 @@
         </div>
     </nav>
 
+    <!-- home section -->
+    <header id="home">
+        <div class="home__container">
+            <div class="home__content container">
+                <div class="row">
+                    <!-- 8 columns  -->
+                    <div class="col-lg-8 d-none d-lg-block">
+
+                        <h1 class="display-4">
+                            Build <strong>social profiles</strong> and gain revenue <strong>profits</strong>
+                        </h1>
+
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x text-primary"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta dolorem sint, molestiae aspernatur ullam consequatur.
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x text-primary"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta dolorem sint, molestiae aspernatur ullam consequatur.
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x text-primary"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta dolorem sint, molestiae aspernatur ullam consequatur.
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- 4 columns -->
+                    <div class="col-lg-4">
+                        <div class="card bg-primary text-center card-form">
+                            <div class="card-body">
+                                <h3>Sign Up Today</h3>
+                                <p>Please fill out this form to register</p>
+                                <form action="#">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Username">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control form-control-lg" placeholder="Email">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control form-control-lg" placeholder="Password">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control form-control-lg" placeholder="Confirm Password">
+                                    </div>
+                                    <button type="submit" class="btn btn-outline-light w-100">Submit</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <!-- fontawesome webfont -->
     <script src="https://kit.fontawesome.com/70401da5f8.js" crossorigin="anonymous"></script>
     <!-- fontawesome SVG -->
