adding create__head section

--- a/index.html
+++ b/index.html
@@ -167,6 +167,24 @@
         </div>
     </section>
 
+    <!-- create head section -->
+    <section class="create__head">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center px-2 py-5">
+                    <h1 class="display-4">Create</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi aliquam iusto nemo consequuntur facere minima voluptates veritatis, placeat ullam nulla?
+                    </p>
+                    <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
+
+
     <!-- fontawesome webfont -->
     <script src="https://kit.fontawesome.com/70401da5f8.js" crossorigin="anonymous"></script>
     <!-- fontawesome SVG -->
