--- a/index.html
+++ b/index.html
@@ -182,7 +182,43 @@
         </div>
     </section>
 
-    
+    <!-- create section -->
+    <section class="explore bg-dark text-light px-2 py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 order-2">
+                    <img src="./img/create-section1.jpg" alt="explore image" class="img-fluid rounded-circle mb-3">
+                </div>
+                <div class="col-md-6 order-1">
+                    <h3>Create Your Passion</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis dicta dolorum aliquam libero totam explicabo dolorem autem repellat iusto cumque?
+                    </p>
+
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x bg-light text-primary rounded p-2"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x bg-light text-primary rounded p-2"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- fontawesome webfont -->
