adding share__head section section

--- a/index.html
+++ b/index.html
@@ -220,6 +220,20 @@
         </div>
     </section>
 
+    <!-- share head section -->
+    <section class="share__head bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center px-2 py-5">
+                    <h1 class="display-4">Share</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi aliquam iusto nemo consequuntur facere minima voluptates veritatis, placeat ullam nulla?
+                    </p>
+                    <a href="#" class="btn btn-outline-light">Find Out More</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- fontawesome webfont -->
     <script src="https://kit.fontawesome.com/70401da5f8.js" crossorigin="anonymous"></script>
