changes the background color of create__head sectio

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </section>
 
     <!-- create head section -->
-    <section class="create__head">
+    <section class="create__head bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col text-center px-2 py-5">
@@ -176,7 +176,7 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi aliquam iusto nemo consequuntur facere minima voluptates veritatis, placeat ullam nulla?
                     </p>
-                    <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+                    <a href="#" class="btn btn-outline-light">Find Out More</a>
                 </div>
             </div>
         </div>
