--- a/index.html
+++ b/index.html
@@ -235,6 +235,44 @@
         </div>
     </section>
 
+    <!-- share section -->
+    <section class="explore bg-light text-muted px-2 py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="./img/share-section1.jpg" alt="explore image" class="img-fluid rounded-circle mb-3">
+                </div>
+                <div class="col-md-6">
+                    <h3>Share What You Create</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis dicta dolorum aliquam libero totam explicabo dolorem autem repellat iusto cumque?
+                    </p>
+
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x bg-dark text-light rounded p-2"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+                        <div class="p-4 align-self-start">
+                            <i class="fas fa-check fa-2x bg-dark text-light rounded p-2"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- fontawesome webfont -->
     <script src="https://kit.fontawesome.com/70401da5f8.js" crossorigin="anonymous"></script>
     <!-- fontawesome SVG -->
