wrapping up all things

--- a/index.html
+++ b/index.html
@@ -114,164 +114,170 @@
         </div>
     </header>
 
-    <!-- explore head section -->
-    <section class="explore__head">
-        <div class="container">
-            <div class="row">
-                <div class="col text-center px-2 py-5">
-                    <h1 class="display-4">Explore</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi aliquam iusto nemo consequuntur facere minima voluptates veritatis, placeat ullam nulla?
-                    </p>
-                    <a href="#" class="btn btn-outline-secondary">Find Out More</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- explore section -->
-    <section class="explore bg-light text-muted px-2 py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="./img/explore-section1.jpg" alt="explore image" class="img-fluid rounded-circle mb-3">
-                </div>
-                <div class="col-md-6">
-                    <h3>Explore & Connect</h3>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis dicta dolorum aliquam libero totam explicabo dolorem autem repellat iusto cumque?
-                    </p>
-
-                    <div class="d-flex">
-                        <div class="p-4 align-self-start">
-                            <i class="fas fa-check fa-2x bg-dark text-light rounded p-2"></i>
-                        </div>
-                        <div class="p-4 align-self-end">
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
-                            </p>
-                        </div>
-                    </div>
-                    <div class="d-flex">
-                        <div class="p-4 align-self-start">
-                            <i class="fas fa-check fa-2x bg-dark text-light rounded p-2"></i>
-                        </div>
-                        <div class="p-4 align-self-end">
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
-                            </p>
-                        </div>
+    <div id="explore">
+        <!-- explore head section -->
+        <section class="explore__head">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center px-2 py-5">
+                        <h1 class="display-4">Explore</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi aliquam iusto nemo consequuntur facere minima voluptates veritatis, placeat ullam nulla?
+                        </p>
+                        <a href="#" class="btn btn-outline-secondary">Find Out More</a>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- create head section -->
-    <section class="create__head bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col text-center px-2 py-5">
-                    <h1 class="display-4">Create</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi aliquam iusto nemo consequuntur facere minima voluptates veritatis, placeat ullam nulla?
-                    </p>
-                    <a href="#" class="btn btn-outline-light">Find Out More</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- create section -->
-    <section class="explore bg-dark text-light px-2 py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 order-2">
-                    <img src="./img/create-section1.jpg" alt="explore image" class="img-fluid rounded-circle mb-3">
-                </div>
-                <div class="col-md-6 order-1">
-                    <h3>Create Your Passion</h3>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis dicta dolorum aliquam libero totam explicabo dolorem autem repellat iusto cumque?
-                    </p>
-
-                    <div class="d-flex">
-                        <div class="p-4 align-self-start">
-                            <i class="fas fa-check fa-2x bg-light text-primary rounded p-2"></i>
-                        </div>
-                        <div class="p-4 align-self-end">
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
-                            </p>
-                        </div>
+        <!-- explore section -->
+        <section class="explore bg-light text-muted px-2 py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="./img/explore-section1.jpg" alt="explore image" class="img-fluid rounded-circle mb-3">
                     </div>
-                    <div class="d-flex">
-                        <div class="p-4 align-self-start">
-                            <i class="fas fa-check fa-2x bg-light text-primary rounded p-2"></i>
+                    <div class="col-md-6">
+                        <h3>Explore & Connect</h3>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis dicta dolorum aliquam libero totam explicabo dolorem autem repellat iusto cumque?
+                        </p>
+
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x bg-dark text-light rounded p-2"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
+                                </p>
+                            </div>
                         </div>
-                        <div class="p-4 align-self-end">
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
-                            </p>
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x bg-dark text-light rounded p-2"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
-    <!-- share head section -->
-    <section class="share__head bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col text-center px-2 py-5">
-                    <h1 class="display-4">Share</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi aliquam iusto nemo consequuntur facere minima voluptates veritatis, placeat ullam nulla?
-                    </p>
-                    <a href="#" class="btn btn-outline-light">Find Out More</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- share section -->
-    <section class="explore bg-light text-muted px-2 py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="./img/share-section1.jpg" alt="explore image" class="img-fluid rounded-circle mb-3">
-                </div>
-                <div class="col-md-6">
-                    <h3>Share What You Create</h3>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis dicta dolorum aliquam libero totam explicabo dolorem autem repellat iusto cumque?
-                    </p>
-
-                    <div class="d-flex">
-                        <div class="p-4 align-self-start">
-                            <i class="fas fa-check fa-2x bg-dark text-light rounded p-2"></i>
-                        </div>
-                        <div class="p-4 align-self-end">
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
-                            </p>
-                        </div>
-                    </div>
-                    <div class="d-flex">
-                        <div class="p-4 align-self-start">
-                            <i class="fas fa-check fa-2x bg-dark text-light rounded p-2"></i>
-                        </div>
-                        <div class="p-4 align-self-end">
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
-                            </p>
-                        </div>
+    <div id="create">
+        <!-- create head section -->
+        <section class="create__head bg-primary">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center px-2 py-5">
+                        <h1 class="display-4">Create</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi aliquam iusto nemo consequuntur facere minima voluptates veritatis, placeat ullam nulla?
+                        </p>
+                        <a href="#" class="btn btn-outline-light">Find Out More</a>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <!-- create section -->
+        <section class="explore bg-dark text-light px-2 py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 order-2">
+                        <img src="./img/create-section1.jpg" alt="explore image" class="img-fluid rounded-circle mb-3">
+                    </div>
+                    <div class="col-md-6 order-1">
+                        <h3>Create Your Passion</h3>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis dicta dolorum aliquam libero totam explicabo dolorem autem repellat iusto cumque?
+                        </p>
+
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x bg-light text-primary rounded p-2"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x bg-light text-primary rounded p-2"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+   <div id="share">
+        <!-- share head section -->
+        <section class="share__head bg-primary">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center px-2 py-5">
+                        <h1 class="display-4">Share</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi aliquam iusto nemo consequuntur facere minima voluptates veritatis, placeat ullam nulla?
+                        </p>
+                        <a href="#" class="btn btn-outline-light">Find Out More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- share section -->
+        <section class="explore bg-light text-muted px-2 py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="./img/share-section1.jpg" alt="explore image" class="img-fluid rounded-circle mb-3">
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Share What You Create</h3>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis dicta dolorum aliquam libero totam explicabo dolorem autem repellat iusto cumque?
+                        </p>
+
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x bg-dark text-light rounded p-2"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <div class="p-4 align-self-start">
+                                <i class="fas fa-check fa-2x bg-dark text-light rounded p-2"></i>
+                            </div>
+                            <div class="p-4 align-self-end">
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci hic suscipit tempore dolorum velit minima quis expedita quaerat vel!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+   </div>
 
     <!-- fontawesome webfont -->
     <script src="https://kit.fontawesome.com/70401da5f8.js" crossorigin="anonymous"></script>
