--- a/index.html
+++ b/index.html
@@ -279,6 +279,20 @@
         </section>
    </div>
 
+   <!-- footer section -->
+   <footer id="footer">
+       <div class="container">
+           <div class="row">
+               <div class="col text-center py-4">
+                   <h5>LoopLab</h5>
+                   <p>copy &copy; <span id="year"></span> All Right Reserved</p>
+                    
+                </div>
+           </div>
+       </div>
+   </footer>
+
+
     <!-- fontawesome webfont -->
     <script src="https://kit.fontawesome.com/70401da5f8.js" crossorigin="anonymous"></script>
     <!-- fontawesome SVG -->
@@ -289,5 +303,6 @@
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- main js file -->
+   
 </body>
 </html>
