--- a/index.html
+++ b/index.html
@@ -299,11 +299,7 @@
 
                <div class="modal-header">
                    <h5 class="modal-title">Contact Us</h5>
-                   <button class="close p-1" data-dismis="modal">
-                       <span>
-                           &times;
-                       </span>
-                   </button>
+                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                </div>
                <div class="modal-body">
                     <form action="#">
